# garmin-stats

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  client.py  dashboard.py  interactive.ipynb  pyproject.toml  requirements.txt
src/: client.py  dashboard.py  gen_route_heatmap.ipynb  interactive.ipynb  workouts.py
