[project]
name = "garmin-stats"
version = "0.1.0"
description = "Working with data from Garmin watch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "garth>=0.5.17",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "pandas>=2.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
