[project]
name = "garmin-stats"
version = "0.1.0"
description = "Garmin Watch Statistics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "garth>=0.5.17",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "pandas>=2.0.0",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
